--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
   },
   "require": {
     "craftcms/cms": "^3.0.0",
-    "ext-json": "*"
+    "ext-json": "*",
+    "php": "7.0"
   },
   "autoload": {
     "psr-4": {
