--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "require": {
     "craftcms/cms": "^3.0.0",
     "ext-json": "*",
-    "php": "7.0"
+    "php": "^7.0"
   },
   "autoload": {
     "psr-4": {
