--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "codemonauts/craft-instagram-feed",
   "description": "Craft CMS plugin to receive Instragram feed data as variable in templates.",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "type": "craft-plugin",
   "keywords": [
     "craft",
@@ -19,7 +19,7 @@
   ],
   "support": {
     "source": "https://github.com/codemonauts/craft-instagram-feed",
-    "docs": "https://github.com/codemonauts/craft-instagram-feed/blob/master/README.md",
+    "docs": "https://plugins.codemonauts.com/plugins/instagramfeed/Introduction.html",
     "issues": "https://github.com/codemonauts/craft-instagram-feed/issues"
   },
   "require": {
