--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "codemonauts/craft-instagram-feed",
-  "description": "Craft CMS plugin to receive Instragram feed data as variable in templates.",
-  "version": "1.1.7",
+  "description": "Craft CMS plugin to receive Instagram feed data as variable in templates.",
+  "version": "2.0.0",
   "type": "craft-plugin",
   "keywords": [
     "craft",
@@ -23,9 +23,9 @@
     "issues": "https://github.com/codemonauts/craft-instagram-feed/issues"
   },
   "require": {
-    "craftcms/cms": "^3.0.0",
+    "craftcms/cms": "^4.0.0-alpha.1",
     "ext-json": "*",
-    "php": "^7.2|^8.0"
+    "php": "^8.0"
   },
   "autoload": {
     "psr-4": {
@@ -35,9 +35,6 @@
   "extra": {
     "handle": "instagramfeed",
     "class": "codemonauts\\instagramfeed\\InstagramFeed",
-    "name": "Instagram Feed",
-    "description": "Receive Instagram feeds.",
-    "hasCpSection": false,
-    "hasSettings": true
+    "name": "Instagram Feed"
   }
 }
